// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should render correctly 1`] = `
<div>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 jwEgwh"
    id="footer"
  >
    <div
      class="logostyles__OuterContainer-sc-1fentac-0 hLzBQR footerstyles__StyledLogo-sc-ojjd19-1 iDMNXa"
    >
      <a
        class="logostyles__StyledLink-sc-1fentac-1 bTAtdl"
        href="/"
      >
        <span
          aria-label="Home page"
          class="logostyles__LargeText-sc-1fentac-2 cachOr"
        >
          LOGO
        </span>
      </a>
    </div>
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-2 jckxzC"
    >
      <span
        class="sc-jrcTuL dRJySQ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="footer-navstyles__Wrapper-sc-7lmnsj-0 bCyRIt footerstyles__StyledFooterNav-sc-ojjd19-3"
    >
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 bcuhSW"
      >
        <a
          class="sc-iBYQkv cCatJA"
          href="/sitemap"
        >
          Site map
        </a>
        <a
          class="sc-iBYQkv cCatJA"
          href="/privacy-policy"
        >
          Privacy
        </a>
        <a
          class="sc-iBYQkv cCatJA"
          href="/login"
        >
          Login/Account
        </a>
        <a
          class="sc-iBYQkv cCatJA"
          href="/status"
        >
          Status
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<Footer /> Should render correctly with custom className 1`] = `
<div>
  <footer
    class="footerstyles__Container-sc-ojjd19-0 jwEgwh test-custom-className"
    id="footer"
  >
    <div
      class="logostyles__OuterContainer-sc-1fentac-0 hLzBQR footerstyles__StyledLogo-sc-ojjd19-1 iDMNXa"
    >
      <a
        class="logostyles__StyledLink-sc-1fentac-1 bTAtdl"
        href="/"
      >
        <span
          aria-label="Home page"
          class="logostyles__LargeText-sc-1fentac-2 cachOr"
        >
          LOGO
        </span>
      </a>
    </div>
    <div
      class="footerstyles__StyledTechSpecs-sc-ojjd19-2 jckxzC"
    >
      <span
        class="sc-jrcTuL dRJySQ tech-specsstyles__StyledParagraph-sc-1ysn53a-0 hLsLJb"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="tech-specsstyles__Icon-sc-1ysn53a-1 ifSCys"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="footer-navstyles__Wrapper-sc-7lmnsj-0 bCyRIt footerstyles__StyledFooterNav-sc-ojjd19-3"
    >
      <div
        class="footer-navstyles__Section-sc-7lmnsj-1 bcuhSW"
      >
        <a
          class="sc-iBYQkv cCatJA"
          href="/sitemap"
        >
          Site map
        </a>
        <a
          class="sc-iBYQkv cCatJA"
          href="/privacy-policy"
        >
          Privacy
        </a>
        <a
          class="sc-iBYQkv cCatJA"
          href="/login"
        >
          Login/Account
        </a>
        <a
          class="sc-iBYQkv cCatJA"
          href="/status"
        >
          Status
        </a>
      </div>
    </div>
  </footer>
</div>
`;
